# exoplanetDSA230

./: .gitignore  Exoplanet Datasets  Lux Dataset  README.md  exo_toolkit.py  graphtest.ipynb  hello.py  model_test.ipynb  pyproject.toml  tk_test.ipynb
data/: Exoplanet Datasets
