[project]
name = "exoplanetdsa230"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "plotly>=5.24.1",
    "polars>=1.14.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]
