[project]
name = "exoplanetdsa230"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "jupyter>=1.1.1",
    "kaggle>=1.6.17",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "plotly>=5.24.1",
    "polars>=1.15.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "sktime>=0.34.0",
]
